Fixed link buttons not wrapping

--- a/portfolio/home.css
+++ b/portfolio/home.css
@@ -175,6 +175,7 @@ h1 {
     margin-bottom: 1em;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1.5em;
 }
 
